MDB_Bridge/imgui_exports.h

// ===== Windows =====
IMGUI_EXPORT bool igBegin(const char* name, bool* p_open, ImGuiWindowFlags flags);
IMGUI_EXPORT void igEnd();
IMGUI_EXPORT bool igBeginChild_Str(const char* str_id, ImVec2 size, ImGuiChildFlags child_flags, ImGuiWindowFlags window_flags);
IMGUI_EXPORT void igEndChild();
// ===== Window utilities =====
IMGUI_EXPORT void igSetNextWindowPos(ImVec2 pos, ImGuiCond cond, ImVec2 pivot);
IMGUI_EXPORT void igSetNextWindowSize(ImVec2 size, ImGuiCond cond);
IMGUI_EXPORT float igGetWindowWidth();
IMGUI_EXPORT float igGetWindowHeight();
// ===== Widgets: Text =====
IMGUI_EXPORT void igTextUnformatted(const char* text, const char* text_end);
IMGUI_EXPORT void igTextDisabled(const char* fmt, ...);
// ===== Widgets: Main =====
IMGUI_EXPORT bool igButton(const char* label, ImVec2 size);
IMGUI_EXPORT bool igCheckbox(const char* label, bool* v);
// ===== Widgets: Input =====
IMGUI_EXPORT bool igInputText(const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
IMGUI_EXPORT void igTextWrapped(const char* fmt, ...);
// ===== Widgets: Buttons =====
IMGUI_EXPORT bool igSmallButton(const char* label);