Documentation/Examples/MDB_Explorer_ImGui/ImGuiBindings.cs

// ==============================
// ImGuiBindings - Complete ImGui integration for MDB
// ==============================
// This file provides:
// - P/Invoke bindings for MDB_Bridge ImGui controller functions
// - P/Invoke bindings for Dear ImGui rendering functions
// - ImGuiController for lifecycle management
// 
// No external ImGui.NET dependency required - all bindings are self-contained.

using System;
using System.Numerics;
using System.Runtime.InteropServices;
using System.Text;
using GameSDK.ModHost;

namespace MDB.Explorer.ImGui
{
    #region Enums

    /// <summary>
    /// DirectX version detected by the bridge.
    /// </summary>
    public enum DxVersion : int
    {
        Unknown = 0,
        DX11 = 11,
        DX12 = 12
    }

    /// <summary>
    /// Flags for ImGui windows.
    /// </summary>
    [Flags]
    public enum ImGuiWindowFlags
    {
        None = 0,
        NoTitleBar = 1 << 0,
        NoResize = 1 << 1,
        NoMove = 1 << 2,
        NoScrollbar = 1 << 3,
        NoScrollWithMouse = 1 << 4,
        NoCollapse = 1 << 5,
        AlwaysAutoResize = 1 << 6,
        NoBackground = 1 << 7,
        NoSavedSettings = 1 << 8,
        NoMouseInputs = 1 << 9,
        MenuBar = 1 << 10,
        HorizontalScrollbar = 1 << 11,
        NoFocusOnAppearing = 1 << 12,
        NoBringToFrontOnFocus = 1 << 13,
        AlwaysVerticalScrollbar = 1 << 14,
        AlwaysHorizontalScrollbar = 1 << 15,
        NoNavInputs = 1 << 16,
        NoNavFocus = 1 << 17,
        UnsavedDocument = 1 << 18,
        NoNav = NoNavInputs | NoNavFocus,
        NoDecoration = NoTitleBar | NoResize | NoScrollbar | NoCollapse,
        NoInputs = NoMouseInputs | NoNavInputs | NoNavFocus,
    }

    /// <summary>
    /// Flags for tree nodes.
    /// </summary>
    [Flags]
    public enum ImGuiTreeNodeFlags
    {
        None = 0,
        Selected = 1 << 0,
        Framed = 1 << 1,
        AllowOverlap = 1 << 2,
        NoTreePushOnOpen = 1 << 3,
        NoAutoOpenOnLog = 1 << 4,
        DefaultOpen = 1 << 5,
        OpenOnDoubleClick = 1 << 6,
        OpenOnArrow = 1 << 7,
        Leaf = 1 << 8,
        Bullet = 1 << 9,
        FramePadding = 1 << 10,
        SpanAvailWidth = 1 << 11,
        SpanFullWidth = 1 << 12,
        SpanTextWidth = 1 << 13,
        SpanAllColumns = 1 << 14,
        NavLeftJumpsBackHere = 1 << 15,
        CollapsingHeader = Framed | NoTreePushOnOpen | NoAutoOpenOnLog,
    }

    /// <summary>
    /// Condition for setting values.
    /// </summary>
    public enum ImGuiCond
    {
        None = 0,
        Always = 1 << 0,
        Once = 1 << 1,
        FirstUseEver = 1 << 2,
        Appearing = 1 << 3,
    }

    /// <summary>
    /// Color indices for styling.
    /// </summary>
    public enum ImGuiCol
    {
        Text = 0,
        TextDisabled = 1,
        WindowBg = 2,
        ChildBg = 3,
        PopupBg = 4,
        Border = 5,
        BorderShadow = 6,
        FrameBg = 7,
        FrameBgHovered = 8,
        FrameBgActive = 9,
        TitleBg = 10,
        TitleBgActive = 11,
        TitleBgCollapsed = 12,
        MenuBarBg = 13,
        ScrollbarBg = 14,
        ScrollbarGrab = 15,
        ScrollbarGrabHovered = 16,
        ScrollbarGrabActive = 17,
        CheckMark = 18,
        SliderGrab = 19,
        SliderGrabActive = 20,
        Button = 21,
        ButtonHovered = 22,
        ButtonActive = 23,
        Header = 24,
        HeaderHovered = 25,
        HeaderActive = 26,
    }

    /// <summary>
    /// Input text flags.
    /// </summary>
    [Flags]
    public enum ImGuiInputTextFlags
    {
        None = 0,
        CharsDecimal = 1 << 0,
        CharsHexadecimal = 1 << 1,
        CharsUppercase = 1 << 2,
        CharsNoBlank = 1 << 3,
        AutoSelectAll = 1 << 4,
        EnterReturnsTrue = 1 << 5,
        CallbackCompletion = 1 << 6,
        CallbackHistory = 1 << 7,
        CallbackAlways = 1 << 8,
        CallbackCharFilter = 1 << 9,
        AllowTabInput = 1 << 10,
        CtrlEnterForNewLine = 1 << 11,
        NoHorizontalScroll = 1 << 12,
        AlwaysOverwrite = 1 << 13,
        ReadOnly = 1 << 14,
        Password = 1 << 15,
        NoUndoRedo = 1 << 16,
        CharsScientific = 1 << 17,
        CallbackResize = 1 << 18,
        CallbackEdit = 1 << 19,
        EscapeClearsAll = 1 << 20,
    }

    /// <summary>
    /// Combo box flags.
    /// </summary>
    [Flags]
    public enum ImGuiComboFlags
    {
        None = 0,
        PopupAlignLeft = 1 << 0,
        HeightSmall = 1 << 1,
        HeightRegular = 1 << 2,
        HeightLarge = 1 << 3,
        HeightLargest = 1 << 4,
        NoArrowButton = 1 << 5,
        NoPreview = 1 << 6,
        WidthFitPreview = 1 << 7,
    }

    /// <summary>
    /// Selectable flags.
    /// </summary>
    [Flags]
    public enum ImGuiSelectableFlags
    {
        None = 0,
        DontClosePopups = 1 << 0,
        SpanAllColumns = 1 << 1,
        AllowDoubleClick = 1 << 2,
        Disabled = 1 << 3,
        AllowOverlap = 1 << 4,
    }

    /// <summary>
    /// Slider flags.
    /// </summary>
    [Flags]
    public enum ImGuiSliderFlags
    {
        None = 0,
        AlwaysClamp = 1 << 4,
        Logarithmic = 1 << 5,
        NoRoundToFormat = 1 << 6,
        NoInput = 1 << 7,
    }

    #endregion

    #region ImGui Native Bindings

    /// <summary>
    /// P/Invoke bindings for Dear ImGui functions exported from MDB_Bridge.
    /// </summary>
    public static class ImGui
    {
        private const string DllName = "MDB_Bridge.dll";

        // ===== Windows =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBegin")]
        private static extern byte igBegin([MarshalAs(UnmanagedType.LPStr)] string name, IntPtr p_open, ImGuiWindowFlags flags);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBegin")]
        private static extern unsafe byte igBegin([MarshalAs(UnmanagedType.LPStr)] string name, byte* p_open, ImGuiWindowFlags flags);

        public static bool Begin(string name)
        {
            return igBegin(name, IntPtr.Zero, ImGuiWindowFlags.None) != 0;
        }

        public static unsafe bool Begin(string name, ref bool p_open, ImGuiWindowFlags flags = ImGuiWindowFlags.None)
        {
            byte open = p_open ? (byte)1 : (byte)0;
            byte result = igBegin(name, &open, flags);
            p_open = open != 0;
            return result != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igEnd")]
        public static extern void End();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBeginChild_Str")]
        private static extern byte igBeginChild([MarshalAs(UnmanagedType.LPStr)] string str_id, Vector2 size, int child_flags, ImGuiWindowFlags window_flags);

        public static bool BeginChild(string str_id, Vector2 size = default, int child_flags = 0, ImGuiWindowFlags window_flags = ImGuiWindowFlags.None)
        {
            return igBeginChild(str_id, size, child_flags, window_flags) != 0;
        }

        public static bool BeginChild(string str_id) => BeginChild(str_id, Vector2.Zero);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igEndChild")]
        public static extern void EndChild();

        // ===== Window utilities =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igSetNextWindowPos")]
        public static extern void SetNextWindowPos(Vector2 pos, ImGuiCond cond = ImGuiCond.None, Vector2 pivot = default);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igSetNextWindowSize")]
        public static extern void SetNextWindowSize(Vector2 size, ImGuiCond cond = ImGuiCond.None);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igGetWindowWidth")]
        public static extern float GetWindowWidth();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igGetWindowHeight")]
        public static extern float GetWindowHeight();

        // ===== Widgets: Text =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igTextUnformatted")]
        private static extern void igTextUnformatted([MarshalAs(UnmanagedType.LPStr)] string text, IntPtr text_end);

        public static void Text(string text)
        {
            igTextUnformatted(text ?? "", IntPtr.Zero);
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igTextDisabled")]
        private static extern void igTextDisabled([MarshalAs(UnmanagedType.LPStr)] string fmt);

        public static void TextDisabled(string text)
        {
            igTextDisabled(text ?? "");
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igTextWrapped")]
        private static extern void igTextWrapped([MarshalAs(UnmanagedType.LPStr)] string fmt);

        public static void TextWrapped(string text)
        {
            igTextWrapped(text ?? "");
        }

        // ===== Widgets: Main =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igButton")]
        private static extern byte igButton([MarshalAs(UnmanagedType.LPStr)] string label, Vector2 size);

        public static bool Button(string label, Vector2 size = default)
        {
            return igButton(label, size) != 0;
        }

        public static bool Button(string label) => Button(label, Vector2.Zero);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igSmallButton")]
        private static extern byte igSmallButton([MarshalAs(UnmanagedType.LPStr)] string label);

        public static bool SmallButton(string label)
        {
            return igSmallButton(label) != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igCheckbox")]
        private static extern unsafe byte igCheckbox([MarshalAs(UnmanagedType.LPStr)] string label, byte* v);

        public static unsafe bool Checkbox(string label, ref bool v)
        {
            byte val = v ? (byte)1 : (byte)0;
            byte result = igCheckbox(label, &val);
            v = val != 0;
            return result != 0;
        }

        // ===== Widgets: Input =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igInputText")]
        private static extern unsafe byte igInputText(
            byte* label,
            byte* buf,
            UIntPtr buf_size,
            ImGuiInputTextFlags flags,
            IntPtr callback,
            IntPtr user_data);

        public static unsafe bool InputText(string label, ref string text, uint maxLength, ImGuiInputTextFlags flags = ImGuiInputTextFlags.None)
        {
            byte[] buffer = new byte[maxLength];
            if (!string.IsNullOrEmpty(text))
            {
                byte[] textBytes = Encoding.UTF8.GetBytes(text);
                Array.Copy(textBytes, buffer, Math.Min(textBytes.Length, buffer.Length - 1));
            }

            bool result;
            byte[] labelBytes = Encoding.UTF8.GetBytes(label + '\0');
            fixed (byte* bufPtr = buffer)
            fixed (byte* labelPtr = labelBytes)
            {
                result = igInputText(labelPtr, bufPtr, new UIntPtr((uint)buffer.Length), flags, IntPtr.Zero, IntPtr.Zero) != 0;
            }

            if (result)
            {
                int nullIndex = Array.IndexOf(buffer, (byte)0);
                text = Encoding.UTF8.GetString(buffer, 0, nullIndex >= 0 ? nullIndex : buffer.Length);
            }

            return result;
        }
